Update field labels and add heart rate display

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="container">
         <h1>Halbmarathon Sommer 2026</h1>
 
-        <div class="card">
+	<div class="card">
             <h2>Heute</h2>
             <p id="datum"></p>
 
-	    <p><strong>Training:</strong> <span id="training"></span></p>
-	    <p><strong>Distanz:</strong> <span id="distanz"></span></p>
-	    <p><strong>Pace:</strong> <span id="pace"></span></p>
-	    <p><strong>Notiz:</strong> <span id="notiz"></span></p>
-
-        </div>
+            <p><strong>Training:</strong> <span id="training"></span></p>
+            <p><strong>Dauer/Distanz:</strong> <span id="distanz"></span></p>
+            <p><strong>Pace Ziel:</strong> <span id="pace"></span></p>
+            <p><strong>Herzfrequenz Ziel:</strong> <span id="heartrate"></span></p>
+            <p><strong>Notiz:</strong> <span id="notiz"></span></p>
+	</div>
     </div>
 
     <script src="app.js"></script>
