--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 	</div>
     </div>
 
+   <div class="card" id="countdown-card">
+       <h2>Countdown</h2>
+       <p id="countdown-text"></p>
+
+       <div class="progress-container">
+           <div class="progress-bar" id="progress-bar"></div>
+       </div>
+   </div>
+
     <script src="app.js"></script>
 </body>
 </html>
