--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,74 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
 
     <div class="container">
         <h1>Halbmarathon Sommer 2026</h1>
 
-	<div class="card">
-            <h2>Heute</h2>
-            <p id="datum"></p>
+        <div class="card">
+            <h1>Halbmarathon <span>Sommer 2026</span></h1>
 
-            <p><strong>Training:</strong> <span id="training"></span></p>
-            <p><strong>Dauer/Distanz:</strong> <span id="distanz"></span></p>
-            <p><strong>Pace Ziel:</strong> <span id="pace"></span></p>
-            <p><strong>Herzfrequenz Ziel:</strong> <span id="heartrate"></span></p>
-            <p><strong>Notiz:</strong> <span id="notiz"></span></p>
-	</div>
+            <!-- Countdown Card -->
+            <div class="card countdown-card">
+                <p class="countdown-main" id="countdown-text"></p>
+
+                <div class="progress-container">
+                    <div class="progress-bar" id="progress-bar"></div>
+                </div>
+
+                <div class="countdown-dates">
+                    <span>Start: 01.01.2026</span>
+                    <span>Ziel: 05.07.2026</span>
+                </div>
+            </div>
+
+            <!-- Heute Card -->
+            <div class="card">
+                <h2>HEUTE – <span id="datum"></span></h2>
+
+                <div class="training-grid">
+                    <div class="row">
+                        <span class="label">Training</span>
+                        <span id="training"></span>
+                    </div>
+
+                    <div class="row">
+                        <span class="label">Dauer / Distanz</span>
+                        <span id="distanz"></span>
+                    </div>
+
+                    <div class="row">
+                        <span class="label">Pace Ziel</span>
+                        <span id="pace"></span>
+                    </div>
+
+                    <div class="row">
+                        <span class="label">Herzfrequenz Ziel</span>
+                        <span id="heartrate"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Notiz Card -->
+            <div class="card">
+                <h2>Notiz</h2>
+                <p id="notiz"></p>
+            </div>
+        </div>
     </div>
 
-   <div class="card" id="countdown-card">
-       <h2>Countdown</h2>
-       <p id="countdown-text"></p>
+    <div class="card" id="countdown-card">
+        <h2>Countdown</h2>
+        <p id="countdown-text"></p>
 
-       <div class="progress-container">
-           <div class="progress-bar" id="progress-bar"></div>
-       </div>
-   </div>
+        <div class="progress-container">
+            <div class="progress-bar" id="progress-bar"></div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
