--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
 
         <!-- NOTIZ -->
-        <div class="card">
-            <h2>Notiz</h2>
-            <p id="notiz"></p>
+        <div class="card note-card">
+          <h2>Notiz</h2>
+          <p id="notiz"></p>
         </div>
 
     </div>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
