Add dynamic training phases section with phase logic

--- a/index.html
+++ b/index.html
@@ -66,10 +66,18 @@
           <p id="notiz"></p>
         </div>
 
+        <!-- TRAININGSPHASEN -->
+        <div class="section-header">
+          <h2>TRAININGSPHASEN</h2>
+        </div>
+
+        <div class="phases-container" id="phases-container"></div>
+
     </div>
 
     <script src="app.js"></script>
 </body>
 
 </html>
+
 
