Add upcoming 5-day training preview section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 
         <div class="phases-container" id="phases-container"></div>
 
+        <h2 class="section-title">Nächste Tage</h2>
+
+        <div id="upcoming-container" class="upcoming-scroll"></div>
+
     </div>
 
     <script src="app.js"></script>
@@ -103,3 +107,4 @@
 </body>
 
 </html>
+
