--- a/index.html
+++ b/index.html
@@ -62,18 +62,20 @@
 
         <!-- NOTIZ -->
         <div class="card note-card">
-          <h2>Notiz</h2>
-          <p id="notiz"></p>
+            <h2>Notiz</h2>
+            <p id="notiz"></p>
         </div>
 
         <!-- TRAININGSPHASEN -->
         <div class="section-header">
-          <h2>TRAININGSPHASEN</h2>
+            <h2>TRAININGSPHASEN</h2>
         </div>
 
         <div class="phases-container" id="phases-container"></div>
 
-        <h2 class="section-title">Nächste Tage</h2>
+        <div class="section-header">
+            <h2>NÄCHSTE TAGE</h2>
+        </div>
 
         <div id="upcoming-container" class="upcoming-scroll"></div>
 
@@ -82,29 +84,28 @@
     <script src="app.js"></script>
 
     <div id="dev-panel" class="dev-panel hidden">
-      <h3>Dev Panel</h3>
+        <h3>Dev Panel</h3>
 
-      <label>Simuliertes Datum</label>
-      <input type="date" id="dev-date">
+        <label>Simuliertes Datum</label>
+        <input type="date" id="dev-date">
 
-      <label>Trainingsstart</label>
-      <input type="date" id="dev-start">
+        <label>Trainingsstart</label>
+        <input type="date" id="dev-start">
 
-      <label>Wettkampftag</label>
-      <input type="date" id="dev-race">
+        <label>Wettkampftag</label>
+        <input type="date" id="dev-race">
 
-      <label>Phase 1 Wochen</label>
-      <input type="number" id="dev-p1" min="1">
+        <label>Phase 1 Wochen</label>
+        <input type="number" id="dev-p1" min="1">
 
-      <label>Phase 2 Wochen</label>
-      <input type="number" id="dev-p2" min="1">
+        <label>Phase 2 Wochen</label>
+        <input type="number" id="dev-p2" min="1">
 
-      <label>Recovery Wochen</label>
-      <input type="number" id="dev-p4" min="1">
+        <label>Recovery Wochen</label>
+        <input type="number" id="dev-p4" min="1">
 
-      <button id="dev-apply">Apply</button>
+        <button id="dev-apply">Apply</button>
     </div>
 </body>
 
 </html>
-
